# ferraph

./: Cargo.toml  README.md  testgenome.fna
src/: main.rs
