[package]
name = "ferraph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
petgraph = { version = "0.6.0", features = ["serde-1"] }
bio = "0.37.1"
anyhow = "1.0.43"
itertools = "0.10.1"
